update the component_geolocation to new data model

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -995,6 +995,7 @@
 							border-right: 1px solid #777;
 							cursor: pointer;
 							background-color: #ffffff;
+							height: 30px;
 
 							&:hover {
 								background-color: @color_orange_dedalo;
@@ -1006,23 +1007,23 @@
 							}
 
 
-							.layer_icon {
-								height: 30px;
-							}
+							// .layer_icon {
+							//
+							// }
 							.layer_id {
-
+								justify-self: center;
 							}
 							.user_layer_name {
 
 							}
-							.layer_color_box {
-								background-color: #ffffff;
-								.layer_color {
-									width: 80%;
-									height: 20px;
-									border-radius: 19px;
-								}
-							}
+							// .layer_color_box {
+							// 	background-color: #ffffff;
+							// 	.layer_color {
+							// 		width: 80%;
+							// 		height: 20px;
+							// 		border-radius: 19px;
+							// 	}
+							// }
 						}
 						>li:first-child {
 							border-top: 0.5px solid #777;
