add full screen to component_av

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -744,6 +744,7 @@
 						max-height: 100%;
 						// width: 100%;
 						max-width: 100%;
+						min-width: 100%;
 						//min-height: 14em;
 						//background-position: initial;
 						//background-size: cover;
