--- a/core/page/css/layout/buttons.less
+++ b/core/page/css/layout/buttons.less
@@ -172,9 +172,12 @@
 			border-color: #dc3545;
 		}
 		&.warning {
-			color: #212529;
-			background-color: #ffc107;
-			border-color: #ffc107;
+			// color: #212529;
+			// background-color: #ffc107;
+			// border-color: #ffc107;
+			color: #ffffff;
+			background-color: @color_orange_dedalo;
+			border-color: darken(@color_orange_dedalo, 2%);
 		}
 		&.info {
 			color: #fff;
