Minor css adjustments from tools and buttons

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1450,7 +1450,7 @@
 
 			// @media screen and (max-width: 768px) {
 			@media screen and (max-width: 1280px) {
-				flex-basis: 100% !important;
+				// flex-basis: 100% !important;
 			}
 		}//end .section_record &, .wrapper_tool &
 	}//end .wrapper_component
