--- a/core/tools/tool_lang/css/tool_lang.less
+++ b/core/tools/tool_lang/css/tool_lang.less
@@ -49,7 +49,7 @@
 		position: relative;
 
 		>button {
-			.select_style;
+			// .select_style;
 			// font-size: .9em;
 			// background-color: #a6a6a6;
 			// border-radius: 0.30em;
@@ -61,7 +61,10 @@
 		}
 
 		>select {
-			margin-left: 0.5em;
-			.select_style;
+			margin-left: 0.75em;
+			// .select_style;
+			width: fit-content;
+			height: 2.75em;
+			font-size: 0.80em;
 		}
 	}
