--- a/core/tools/tool_time_machine/css/tool_time_machine.less
+++ b/core/tools/tool_time_machine/css/tool_time_machine.less
@@ -46,24 +46,26 @@
 				padding-bottom: 0.5em;
 
 				>* {
-					padding: 0.5em;
-					height: 2em;
+					
 				}
 
 				label {
 					text-transform: capitalize;
+					padding: 0.5em;
+					height: 2em;
 				}
 
 				select {
-
+					padding: 0.5em;
+					height: 2em;
 				}
 
 				.button_apply {
-					background-color: #ff9800;
-					color: white;
-					padding: 0.15em;
-					padding-left: 1em;
-					padding-right: 1em;
+					// background-color: #ff9800;
+					// color: white;
+					// padding: 0.15em;
+					// padding-left: 1em;
+					// padding-right: 1em;
 					float: right;
 				}
 			}//end .tool_bar
