--- a/core/tools/tool_lang_multi/css/tool_lang_multi.less
+++ b/core/tools/tool_lang_multi/css/tool_lang_multi.less
@@ -1,82 +1,81 @@
-// Vars
-@common_css: "../../common/css";
+// // Vars
+// @common_css: "../../common/css";
 
-// Usage
-@import "@{common_css}/library.less";
-
-
-// select style
-	.select_style {
-		width: fit-content;
-		height: 2em;
-		font-size: 0.80em;
-	}
+// // Usage
+// @import "@{common_css}/library.less";
 
 
-
-// components_container
-	.components_container {
-		display: grid;
-	    grid-template-columns: 1fr 1fr;
-	    grid-gap: 1em;
-	    //background-color: #D6F737;
-
-	    >select {
-			.select_style;
-	    }
-
-	    >div {
-
-	    }
-	}
+// // select style
+// 	.select_style {
+// 		width: fit-content;
+// 		height: 2em;
+// 		font-size: 0.80em;
+// 	}
 
 
+// wrapper_tool
+	.wrapper_tool.tool_lang_multi {
 
-// buttons_container
-	.buttons_container {
-		padding-top: 1em;
-		padding-bottom: 1em;
-	}
-
-
-
-// automatic_translation_container
-	.automatic_translation_container {
-		position: relative;
-
-		>button {
-			.select_style;
-			// font-size: .9em;
-			// background-color: #a6a6a6;
-			// border-radius: 0.30em;
-			// cursor: pointer;
-			// color: #ffff;
-			// border: none;
-			// padding-left: 0.75em;
-			// padding-right: 0.75em;
+		>.content_data {
+			padding-right: 1em;
 		}
 
-		>select {
-			margin-left: 0.5em;
-			.select_style;
+		// components_container
+		.components_container {
+			display: grid;
+		    grid-template-columns: 1fr 1fr;
+		    grid-gap: 1em;
+		    //background-color: #D6F737;	    
 		}
 	}
 
-	.target_component_title {
-		flex-grow:1;
-		background-color: #e6e6e6;
-		border-radius: 5px;
-		padding: 5px;
-		margin: 1px;
-		flex-basis: 40%;
 
-		// h4 {
-		// 	padding-left: 5px;
-		// 	padding-top: 3px;
-		// }
+
+// // buttons_container
+// 	.buttons_container {
+// 		padding-top: 1em;
+// 		padding-bottom: 1em;
+// 	}
+
+
+
+// // automatic_translation_container
+// 	.automatic_translation_container {
+// 		position: relative;
+
+// 		>button {
+// 			.select_style;
+// 			// font-size: .9em;
+// 			// background-color: #a6a6a6;
+// 			// border-radius: 0.30em;
+// 			// cursor: pointer;
+// 			// color: #ffff;
+// 			// border: none;
+// 			// padding-left: 0.75em;
+// 			// padding-right: 0.75em;
+// 		}
+
+// 		>select {
+// 			margin-left: 0.5em;
+// 			.select_style;
+// 		}
+// 	}
+
+// 	.target_component_title {
+// 		flex-grow:1;
+// 		background-color: #e6e6e6;
+// 		border-radius: 5px;
+// 		padding: 5px;
+// 		margin: 1px;
+// 		flex-basis: 40%;
+
+// 		// h4 {
+// 		// 	padding-left: 5px;
+// 		// 	padding-top: 3px;
+// 		// }
 		
-	}
+// 	}
 
-	.source{
-		background-color: @color_orange;
-	}
+// 	.source{
+// 		background-color: @color_orange;
+// 	}
