Minor css adjustments included input elements into dd-modal

--- a/core/page/css/layout/buttons.less
+++ b/core/page/css/layout/buttons.less
@@ -36,6 +36,7 @@
 		user-select: none;
 		display: inline-block;
 		width: 1em;
+		min-width: 1em;
 		height: 1em;
 		opacity: 0.8;
 		background-color: #000000;
