--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -105,7 +105,7 @@
 			width: 100%;
 			margin-right: 0.5em;
 
-			padding: 0.5em;
+			// padding: 0.5em;
 			//border-radius: 3px;
 			border: none;
 			outline: 1px solid #eeebeb;
@@ -113,6 +113,10 @@
 			transition: all .5s ease, padding 0s;
 			//transition: padding 0s;
 			opacity: 0.75;
+
+			padding: 0;
+			padding-left: 0.5em;
+			padding-right: 0.5em;
 
 			// on focus inputs, adds a soft shadow and outline
 			&:focus {
@@ -1119,7 +1123,7 @@
 			>* {
 				&:not(mark) {
 					padding: 1em;
-				}				
+				}
 
 				&.paginator {
 					padding: 0;
