Add download icon css style

--- a/core/page/css/layout/buttons.less
+++ b/core/page/css/layout/buttons.less
@@ -95,6 +95,10 @@
 		&.upload {
 			.add_mask('upload.svg');
 		}
+		&.download {
+			.add_mask('download.svg');
+			// transform: scaleY(-1);
+		}
 		&.find {
 			.add_mask('find.svg');
 		}
