Add changed css class for unsaved component json menu color

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -851,6 +851,10 @@
 					.inputs_container>li {
 						// align-items: initial;
 
+						.changed {
+							// border: 1px solid #ea0000;
+							background-color: #ea0000 !important;
+						}
 
 
 					}
