--- a/core/tools/tool_dd_label/css/tool_dd_label.css
+++ b/core/tools/tool_dd_label/css/tool_dd_label.css
@@ -1,22 +1,25 @@
-.wrapper_tool.tool_dd_label > .content_data > .label_matix > li {
+.wrapper_tool.tool_dd_label > .content_data > .label_matix {
   display: grid;
 }
-.wrapper_tool.tool_dd_label > .content_data > .label_matix > .label_header {
+.wrapper_tool.tool_dd_label > .content_data > .label_matix > li {
+  display: contents;
+}
+.wrapper_tool.tool_dd_label > .content_data > .label_matix > li > * {
   align-items: center;
   justify-items: center;
+}
+.wrapper_tool.tool_dd_label > .content_data > .label_matix > li.label_header > .label {
+  padding: 0.6em;
+  text-align: center;
   background-color: #f78a1c;
   color: #fff;
   font-weight: 400;
   z-index: 2;
 }
-.wrapper_tool.tool_dd_label > .content_data > .label_matix > .label_header > .label {
-  padding: 0.6em;
-}
-.wrapper_tool.tool_dd_label > .content_data > .label_matix > .row > .label {
-  height: 20px;
+.wrapper_tool.tool_dd_label > .content_data > .label_matix > li.row > .label {
   border: 1px solid gray;
 }
-.wrapper_tool.tool_dd_label > .content_data > .label_matix > .row > .label[contentEditable=true]:empty:not(:focus):before {
+.wrapper_tool.tool_dd_label > .content_data > .label_matix > li.row > .label[contentEditable=true]:empty:not(:focus):before {
   content: attr(data-placeholder);
   color: #aaa;
 }
