--- a/core/tools/tool_dd_label/css/tool_dd_label.less
+++ b/core/tools/tool_dd_label/css/tool_dd_label.less
@@ -8,33 +8,39 @@
 		>.content_data {
 
 			>.label_matix{
-				>li{
-					display: grid;
+				display: grid;
 
-				}
-				>.label_header{
-					align-items: center;
-					justify-items: center;
-					background-color: #f78a1c;
-				    color: #fff;
-				    font-weight: 400;
-				    z-index: 2;
-					>.label{
-						padding: 0.6em;
+				>li {
+					display: contents;
+
+					>* {
+						align-items: center;
+						justify-items: center;
 					}
-				}
-				>.row{
-					// system info
-					>.label {
-						&[contentEditable=true]:empty:not(:focus):before{
-						    content:attr(data-placeholder);
-							color: #aaa;
+
+					&.label_header{
+						>.label{
+							padding: 0.6em;
+							text-align: center;
+							background-color: #f78a1c;
+						    color: #fff;
+						    font-weight: 400;
+						    z-index: 2;
 						}
-						height:20px;
-						border:1px solid gray;
+					}
+
+					&.row{
+						// system info
+						>.label {
+							&[contentEditable=true]:empty:not(:focus):before{
+							    content:attr(data-placeholder);
+								color: #aaa;
+							}
+							// height:20px;
+							border:1px solid gray;
+						}
 					}
 				}
-
 			}
 
 
