--- a/core/page/css/layout/vars.less
+++ b/core/page/css/layout/vars.less
@@ -7,6 +7,14 @@
 	@color_grey_dark 		: #949494; // used in section group headers
 	@color_grey_medium 		: #e6e6e6; // used in component actibe background
 
+	@color_primary 			: #007bff; // used in button primary (blue)
+	@color_secondary 		: #6c757d; // used in button primary (dark blue?)
+	@color_success	 		: #28a745; // used in button primary (green)
+	@color_danger	 		: #dc3545; // used in button primary (red)
+	@color_info		 		: #17a2b8; // used in button primary (cian)
+	@color_light		 	: #f8f9fa; // used in button primary (light grey)
+	@color_dark		 		: #343a40; // used in button primary (dark grey)
+
 
 
 // paths
