--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -2226,7 +2226,7 @@
 			// }
 
 			&.warning {
-				display: block;
+				display: flex;
 				background-color: #e8e0e1;
 				border: 1px solid darken(@color_danger, 5%);
 				color: @color_danger;
