Fix css buttons issues

--- a/core/component_geolocation/css/component_geolocation.less
+++ b/core/component_geolocation/css/component_geolocation.less
@@ -46,7 +46,7 @@
 		}
 
 	.map_inputs	.map_reload {
-		.build_button('reload.svg');
+		.fn_build_button('reload.svg');
 		width: 1.2em;
 		height: 1.2em;
 		}
@@ -59,7 +59,7 @@
 		}
 
 	// .map_inputs	.map_full_screen {
-	// 		.build_button('full_screen.svg');
+	// 		.fn_build_button('full_screen.svg');
 	// 		width: 1.2em;
 	// 		height: 1.2em;
 	// 	}
