--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -230,7 +230,7 @@
 
 				&:before {
 					content: " ";
-					.build_button('gear.svg', white, 0.7);
+					.fn_build_button('gear.svg', white, 0.7);
 					float: right;
 					margin: 0;
 					cursor: default;
@@ -249,7 +249,7 @@
 					}
 					&:before {
 						content: " ";
-						.build_button('arrow-circle-right.svg', #3F3F3F, 1);
+						.fn_build_button('arrow-circle-right.svg', #3F3F3F, 1);
 						vertical-align: text-bottom;
 						padding: 0;
 						margin: 0;
@@ -348,7 +348,7 @@
 						// .background_icon('eraser.svg');
 						cursor: pointer;
 
-						.build_button('eraser.svg', white, 1)
+						.fn_build_button('eraser.svg', white, 1)
 					}
 				}
 			}
@@ -635,13 +635,13 @@
 						// 	//.icon_svg;
 						// 	//background-image: url(../../themes/default/icons/edit.svg);
 						// 	// .background_icon('edit.svg');
-						// 	.build_button('edit.svg', black, 1);
+						// 	.fn_build_button('edit.svg', black, 1);
 
 						// 	&.tm_preview {
-						// 		.build_button('eye.svg', black, 1);
+						// 		.fn_build_button('eye.svg', black, 1);
 						// 	}
 						// 	&.link {
-						// 		.build_button('link.svg', black, 1);
+						// 		.fn_build_button('link.svg', black, 1);
 						// 	}
 						// }
 
@@ -662,7 +662,7 @@
 						// 	//.icon_svg;
 						// 	//background-image: url(../../themes/default/icons/trash-o.svg);
 						// 	// .background_icon('trash-o.svg');
-						// 	.build_button('trash-o.svg', black, 1);
+						// 	.fn_build_button('trash-o.svg', black, 1);
 						// }
 					}
 				}//end id_column
@@ -833,7 +833,7 @@
 			&.component_json {
 				>.buttons_container {
 					.button_fullscreen {
-						// .build_button('full_screen.svg');
+						// .fn_build_button('full_screen.svg');
 						// position: absolute;
 						// top: 9px;
 						// z-index: 4;
@@ -1236,7 +1236,7 @@
 
 				// Vector editor
 					.vector_editor {
-						.add_mask('vector_editor.svg');
+						.fn_add_mask('vector_editor.svg');
 					}
 					// tool buttons container
 					.vector_editor_tools {
@@ -1303,7 +1303,7 @@
 									}
 
 									.layer_icon {
-										// .build_button('eye.svg', black, 1);
+										// .fn_build_button('eye.svg', black, 1);
 										background-color: black;
 										justify-self: center;
 										opacity: 0.2;
@@ -1323,7 +1323,7 @@
 
 									}
 									.layer_delete {
-										// .build_button('trash_light.svg', black, 1);
+										// .fn_build_button('trash_light.svg', black, 1);
 										background-color: black;
 										justify-self: center;
 									}
@@ -1353,35 +1353,35 @@
 							}
 						}
 						.pointer {
-							.add_mask('pointer.svg');
+							.fn_add_mask('pointer.svg');
 						}
 						.pointer_alt {
-							.add_mask('pointer_alt.svg');
+							.fn_add_mask('pointer_alt.svg');
 						}
 						.transform {
-							.add_mask('pointer.svg');
+							.fn_add_mask('pointer.svg');
 						}
 						.rectangle {
-							.add_mask('rectangle.svg');
+							.fn_add_mask('rectangle.svg');
 						}
 						.circle {
-							.add_mask('circle.svg');
+							.fn_add_mask('circle.svg');
 						}
 						.vector {
-							.add_mask('vector.svg');
+							.fn_add_mask('vector.svg');
 						}
 						.zoom {
-							.add_mask('find.svg');
+							.fn_add_mask('find.svg');
 						}
 						.move {
-							.add_mask('hand.svg');
+							.fn_add_mask('hand.svg');
 						}
 						.save {
-							// .build_button('save.svg', black, 1);
+							// .fn_build_button('save.svg', black, 1);
 							// background-color: #000000;
 						}
 						.button_color_picker {
-							// .build_button('rectangle.svg', black, 1);
+							// .fn_build_button('rectangle.svg', black, 1);
 							border: 0.5px solid #3F3F3F;
 						}
 						.color_wheel_contaniner{
@@ -1871,7 +1871,7 @@
 
 		&:after {
 			content: " ";
-			.build_button('lock.svg', red, 1);
+			.fn_build_button('lock.svg', red, 1);
 			position: absolute;
 			top: 4px;
 			right: 4px;
@@ -1885,7 +1885,7 @@
 	.preload {
 		//background-image: url(../../themes/default/icons/preload.svg);
 		// .background_icon('preload.svg');
-		.build_button('preload.svg', black, 1);
+		.fn_build_button('preload.svg', black, 1);
 		// background-repeat: no-repeat;
 		// background-size: contain; // 2em 2em;
 		// background-position: center;
