--- a/core/paginator/css/paginator.less
+++ b/core/paginator/css/paginator.less
@@ -39,23 +39,23 @@
 					}
 
 					&.paginator_first_icon {
-						.build_button('forward.svg', black, 1, 2em);
+						.fn_build_button('forward.svg', black, 1, 2em);
 						transform: scaleX(-1);
 						mask-size: 80%;
 						-webkit-mask-size: 80%;
 					}
 
 					&.paginator_prev_icon {
-						.build_button('play.svg', black, 1, 2em);
+						.fn_build_button('play.svg', black, 1, 2em);
 						transform: scaleX(-1);
 					}
 
 					&.paginator_next_icon {
-						.build_button('play.svg', black, 1, 2em);
+						.fn_build_button('play.svg', black, 1, 2em);
 					}
 
 					&.paginator_last_icon {
-						.build_button('forward.svg', black, 1, 2em);
+						.fn_build_button('forward.svg', black, 1, 2em);
 						mask-size: 80%;
 						-webkit-mask-size: 80%;
 					}
