--- a/core/menu/css/menu.less
+++ b/core/menu/css/menu.less
@@ -213,7 +213,7 @@ background-color: #FFFF00;
 					// opacity: 0.7;
 					// .icon_svg;
 					// .background_icon('list_white.svg');
-					.build_button('list_white.svg', white, 1);
+					.fn_build_button('list_white.svg', white, 1);
 					height: 100%;
 					height: 2em;
 					float: left;
