--- a/core/page/css/layout/buttons.less
+++ b/core/page/css/layout/buttons.less
@@ -1,7 +1,9 @@
 // buttons
 
-// fn buttons with icons
-	.add_mask(@icon_name) {
+
+
+// fn_add_mask . buttons with icons
+	.fn_add_mask(@icon_name) {
 				mask: url("@{images_base_path}/icons/@{icon_name}");
 		-webkit-mask: url("@{images_base_path}/icons/@{icon_name}");
 				mask-size: contain;
@@ -11,8 +13,11 @@
 				mask-position: center;
 		-webkit-mask-position: center;
 	}
-	// fn build_button
-	.build_button(@icon_name, @color:black, @opacity:0.7, @size:1em) {
+
+
+
+// fn_build_button
+	.fn_build_button(@icon_name, @color:black, @opacity:0.7, @size:1em) {
 
 		// create base standard button
 		.button;
@@ -22,7 +27,7 @@
 		height: @size;
 
 		// custom icon svg name
-		.add_mask(@icon_name);
+		.fn_add_mask(@icon_name);
 
 		// custom icon color
 		background: @color;
@@ -30,7 +35,28 @@
 		// custom size overwrite
 		opacity: @opacity;
 	}
-	// button generic to apply to span elements
+
+
+
+// fn_append_icon (used by tag element 'button')
+	.fn_append_icon(@icon_name, @color:#3f3f3f, @opacity:1) {
+
+		&:before {
+			content: " ";
+			display: inline-block;
+			width: 1em;
+			height: 1em;
+			margin-right: 0.5em;
+			vertical-align: baseline;
+			background-color: @color;
+			opacity: @opacity;
+			.fn_add_mask(@icon_name);
+		}
+	}
+
+
+
+// button : generic to apply to span elements
 	.button { // @icon_name:null, @color:black, @opacity:0.7, @size:1em
 		cursor: pointer;
 		user-select: none;
@@ -68,7 +94,7 @@
 
 
 
-// button . explicit buttons (dialog box etc.)
+// button tag. explicit buttons (dialog box etc.)
 	button {
 		// appearance: none;
 		// font-size: .9em;
@@ -84,7 +110,6 @@
 		// bootstrap
 		// display: inline-block;
 		font-weight: 400;
-		color: #212529;
 		text-align: center;
 		vertical-align: middle;
 		cursor: pointer;
@@ -103,25 +128,40 @@
 		display: flex;
     	align-items: center;
 
+    	// color
+    	color: #212529; // default dark grey
+
 		&.primary {
-			color: #fff;
+			color: #ffffff;
 			background-color: @color_primary;
 			border-color: @color_primary;
+			&:before {
+				background-color: #ffffff !important;
+			}
 		}
 		&.secondary {
-			color: #fff;
+			color: #ffffff;
 			background-color: @color_secondary;
 			border-color: @color_secondary;
+			&:before {
+				background-color: #ffffff !important;
+			}
 		}
 		&.success {
-			color: #fff;
+			color: #ffffff;
 			background-color: @color_success;
 			border-color: @color_success;
+			&:before {
+				background-color: #ffffff !important;
+			}
 		}
 		&.danger {
-			color: #fff;
+			color: #ffffff;
 			background-color: @color_danger;
 			border-color: @color_danger;
+			&:before {
+				background-color: #ffffff !important;
+			}
 		}
 		&.warning {
 			// color: #212529;
@@ -130,21 +170,33 @@
 			color: #ffffff;
 			background-color: @color_orange_dedalo;
 			border-color: darken(@color_orange_dedalo, 2%);
+			&:before {
+				background-color: #ffffff !important;
+			}
 		}
 		&.info {
-			color: #fff;
+			color: #ffffff;
 			background-color: @color_info;
 			border-color: @color_info;
+			&:before {
+				background-color: #ffffff !important;
+			}
 		}
 		&.light {
 			color: #212529;
 			background-color: @color_light;
 			border-color: @color_light;
+			&:before {
+				background-color: #212529 !important;
+			}
 		}
 		&.dark {
-			color: #fff;
+			color: #ffffff;
 			background-color: @color_dark;
 			border-color: @color_dark;
+			&:before {
+				background-color: #ffffff !important;
+			}
 		}
 		&.link {
 			font-weight: 400;
@@ -154,108 +206,92 @@
 	}
 
 
-// fn append_icon (used by tag element 'button')
-	.fn_append_icon(@icon_name, @color:#3f3f3f, @opacity:1) {
-		&:before {
-			content: " ";
-			display: inline-block;
-			width: 1em;
-			height: 1em;
-			margin-right: 0.5em;
-			vertical-align: baseline;
-			background-color: @color;
-			opacity: @opacity;
-			.add_mask(@icon_name);
-		}
-	}
 
-
-
-// generic icons for buttons
+// generic recyclable icons for buttons
 	.remove {
 		@icon_name : 'trash.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.add {
 		@icon_name : 'add.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.edit {
 		@icon_name : 'edit.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.pen {
 		@icon_name : 'pen.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.reset {
 		@icon_name : 'eraser.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.align_justify {
 		@icon_name : 'justify.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.search {
 		@icon_name : 'find.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.email {
 		@icon_name : 'email.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.close {
 		@icon_name : 'close.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.link {
 		@icon_name : 'link.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.calendar {
 		@icon_name : 'calendar.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.upload {
 		@icon_name : 'upload.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.download {
 		@icon_name : 'download.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.find {
 		@icon_name : 'find.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.save {
 		@icon_name : 'save.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.eye {
 		@icon_name : 'eye.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 	.full_screen {
 		@icon_name : 'full_screen.svg';
 		button&  { .fn_append_icon(@icon_name); }
-		.button& { .add_mask(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
 	}
 
 
@@ -289,22 +325,24 @@
 			&.bold:before {
 				//background-image: url(../../themes/default/icons/bold.svg);
 				// .background_icon('bold.svg');
-				.build_button('bold.svg', black, 1);
+				.fn_build_button('bold.svg', black, 1);
 			}
 			&.italic:before {
 				//background-image: url(../../themes/default/icons/italic.svg);
 				// .background_icon('italic.svg');
-				.build_button('italic.svg', black, 1);
+				.fn_build_button('italic.svg', black, 1);
 			}
 			&.underline:before {
 				//background-image: url(../../themes/default/icons/underline.svg);
 				// .background_icon('underline.svg');
-				.build_button('underline.svg', black, 1);
+				.fn_build_button('underline.svg', black, 1);
 			}
 			&.replace:before {
 				//background-image: url(../../themes/default/icons/exchange.svg);
 				// .background_icon('exchange.svg');
-				.build_button('exchange.svg', black, 1);
+				.fn_build_button('exchange.svg', black, 1);
 			}
 		}
 	}
+
+
